Update project name in ipynb and README files.

--- a/Basic_Perceptron_AND_Exercise.ipynb
+++ b/Basic_Perceptron_AND_Exercise.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Introduction to Perceptron - AND Gate Case\n",
+        "# Perceptron AND Gate Exercise\n",
         "\n",
         "In this notebook, we will explore the use of a perceptron to solve the logical AND gate. The goal is to train a simple perceptron that can learn the AND operation from a given input dataset. We will start by defining the data and visualizing it."
       ]
